--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -76,7 +76,7 @@ table.form-layout td.form-item.v-align-top {
 
 table.form-layout td.form-item > .form-item-container,
 table.form-layout td.form-item > .form-item-container > span.display-text {
-	height: 24px;
+	min-height: 24px;
 	display: block;
 }
 
