Support for image button in grid.

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -140,6 +140,11 @@
 	        box-sizing: border-box;
 }
 
+.slick-cell.button img {
+	cursor: pointer;
+}
+
+.slick-cell.button,
 .slick-cell-checkboxsel {
 	text-align: center;
 }
