--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -14,6 +14,7 @@
 	  <div class="btn-group" ng-show="toolbar">
 	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
 	  </div>
+	  <div ui-view-switcher class="pull-right"></div>
 	  <div class="record-pager pull-right">
 	    <span>{{pagerText()}}</span>
 	    <div class="btn-group">
