Implemented support for portlet inside form view.

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -397,3 +397,10 @@ html, body {
 	position: absolute;
 	top: 0; left: 0; right: 0; bottom: 0;
 }
+
+.unselectable-text {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
