--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -319,6 +319,11 @@ td.form-item > * {
 	border: none;
 }
 
+.form-item .form-item-portlet,
+.form-item .form-item-portlet .portlet {
+	min-height: 250px;
+}
+
 .form-item .image-item div.btn-group {
 	position: absolute;
 	left: 20px;
