--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -366,7 +366,7 @@ html, body {
 	top: 4px; bottom: 4px; left: 4px; right: 4px;	
 }
 
-.html-view > .iframe-container > iframe {
+.iframe-container > iframe {
 	position: absolute;
 	width: 100%;
 	height: 100%;
