Improved calendar bubble popup.

--- a/axelor-web/src/main/webapp/css/view.calendar.css
+++ b/axelor-web/src/main/webapp/css/view.calendar.css
@@ -52,3 +52,11 @@
 .calendar-view .fc-agenda .calendar-event-day {
 	color: #fff !important;
 }
+
+.calendar-bubble-content {
+	overflow: hidden;
+}
+
+.calendar-bubble-content hr {
+	margin: 8px 0;
+}
