--- a/axelor-meta/src/main/resources/views/Menu.xml
+++ b/axelor-meta/src/main/resources/views/Menu.xml
@@ -69,4 +69,13 @@
     <view type="form" name="meta-translations-form"/>
   </action-view>
 
+  <menuitem name="menu-view-charts" parent="menu-view-management"
+    title="All Charts"
+    action="meta.chart"/>
+    
+  <action-view name="meta.charts" title="All Charts" model="com.axelor.meta.db.MetaChart">
+    <view type="grid" name="meta-chart-grid"/>
+    <view type="form" name="meta-chart-form"/>
+  </action-view>
+
 </object-views>
