--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -270,4 +270,63 @@
     <field name="description"/>
   </form>
 
+  <grid title="Charts" name="meta-chart-grid" model="com.axelor.meta.db.MetaChart">
+    <field name="name" />
+    <field name="title" />
+    <field name="stacked" />
+  </grid>
+  
+  <form title="Chart" name="meta-chart-form" model="com.axelor.meta.db.MetaChart" cols="4">
+    <field name="name" />
+    <field name="title" />
+    <field name="categoryKey" />
+    <field name="categoryType" selection="selection.chart.xtype"/>
+    <field name="stacked" />
+    <field name="nativeQuery" />
+    <notebook colSpan="4">
+      <page cols="1" title="Query" colWidths="50,*">
+        <field name="query" noLabel="true" widget="CodeEditor[syntax=sql]"/>
+      </page>
+      <page title="Series" cols="1">
+        <field name="chartSeries">
+          <grid title="Series" editable="true">
+            <field name="key" />
+            <field name="type" selection="selection.chart.type"/>
+            <field name="side" selection="selection.chart.side"/>
+            <field name="expr"/>
+          </grid>
+          <form title="Series">
+            <field name="key" />
+            <break/>
+            <field name="type" selection="selection.chart.type" />
+            <field name="side" selection="selection.chart.side"/>
+            <field name="expr" colSpan="4"/>
+          </form>
+        </field>
+      </page>
+    </notebook>
+  </form>
+  
+  <selection name="selection.chart.type">
+    <option value="bar">Bar</option>
+    <option value="pie">Pie</option>
+    <option value="line">Line</option>
+    <option value="area">Area</option>
+  </selection>
+  
+  <selection name="selection.chart.side">
+    <option value="left">Left</option>
+    <option value="bottom">Bottom</option>
+    <option value="right">Right</option>
+  </selection>
+
+  <selection name="selection.chart.xtype">
+    <option value="number">Number</option>
+    <option value="decimal">Decimal</option>
+    <option value="month">Month</option>
+    <option value="year">Year</option>
+    <option value="date">Date</option>
+    <option value="time">DateTime</option>
+  </selection>
+
 </object-views>
