Implemented chart view (initial work).
- bar charts
- pie charts

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -434,6 +434,10 @@ table.field-details .help-text hr {
 	overflow: hidden;
 }
 
+.ws-nowrap {
+	white-space: nowrap;
+}
+
 .subtotal {
 	white-space: nowrap;
 	text-align: right;
