--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -11,6 +11,8 @@
 @import url('../lib/fullcalendar/fullcalendar.css');
 @import url('../lib/fullcalendar/fullcalendar.print.css') print;
 
+@import url('../lib/nvd3/nv.d3.css');
+
 @import url('scrollbar.css');
 @import url('main.css');
 
