--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <object-views xmlns="http://apps.axelor.com/xml/ns/object-views"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_0.8.xsd">
+  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_0.9.xsd">
 
   <selection name="view.type.selection">
     <option value="grid">Grid</option>
@@ -33,30 +33,30 @@
   </grid>
 
   <form title="View" name="meta-view-form" model="com.axelor.meta.db.MetaView" cols="2" colWidths="*,250"
-    onNew="action-view-form-onload"
-    onLoad="action-view-form-onload"
     onSave="action-view-validate">
     <notebook rowSpan="2">
       <page title="XML" cols="1">
-        <field name="xml" noLabel="true" widget="CodeEditor[syntax=xml]"/>
+        <field name="xml" noLabel="true" widget="CodeEditor[syntax=xml|height=500]"/>
       </page>
       <page title="Groups" cols="1">
         <field name="groups" noLabel="true"/>
       </page>
     </notebook>
-    <group title="View Details" cols="2">
-      <field name="name"/>
-      <field name="title"/>
-      <field name="type" selection="view.type.selection"/>
-      <field name="model"/>
+    <group cols="2">
       <field name="active"/>
-    </group>
-    <group title="Actions" cols="1">
-      <button name="validate" title="Validate" onClick="action-view-validate"/>
-      <button name="restore" title="Restore" onClick="action-meta-todo"/>
-      <button name="restoreAll" title="Restore All" onClick="action-meta-restore-all"
-        prompt="All the customizations will be lost. Are you sure?"/>
-      <button name="preview" title="Preview" onClick="action-meta-todo"/>
+      <group title="View Details" cols="2" colSpan="2" readonlyIf="id">
+        <field name="name"/>
+        <field name="title"/>
+        <field name="type" selection="view.type.selection"/>
+        <field name="model"/>
+      </group>
+      <group title="Actions" cols="1" colSpan="2">
+        <button name="validate" title="Validate" onClick="action-view-validate"/>
+        <button name="restore" title="Restore" onClick="action-meta-todo"/>
+        <button name="restoreAll" title="Restore All" onClick="action-meta-restore-all"
+          prompt="All the customizations will be lost. Are you sure?"/>
+        <button name="preview" title="Preview" onClick="action-meta-todo"/>
+      </group>
     </group>
   </form>
 
@@ -67,16 +67,14 @@
   </grid>
 
   <form title="Action" name="meta-action-form" model="com.axelor.meta.db.MetaAction"
-    onNew="action-action-form-onload"
-    onLoad="action-action-form-onload"
     onSave="action-action-validate,com.axelor.meta.web.MetaController:clearCache">
-    <field name="name"/>
-    <field name="type" selection="action.type.selection"/>
+    <field name="name" readonlyIf="id"/>
+    <field name="type" readonlyIf="id" selection="action.type.selection"/>
     <field name="model"/>
     <break/>
     <notebook colSpan="4">
       <page title="XML" cols="1">
-        <field name="xml" noLabel="true" widget="CodeEditor[syntax=xml]"/>
+        <field name="xml" noLabel="true" widget="CodeEditor[syntax=xml|height=500]"/>
       </page>
     </notebook>
   </form>
@@ -133,19 +131,6 @@
     <field name="title"/>
   </form>
 
-  <action-attrs name="action-view-form-onload">
-    <attribute name="readonly" for="name" expr="eval: id != null"/>
-    <attribute name="readonly" for="title" expr="eval: id != null"/>
-    <attribute name="readonly" for="type" expr="eval: id != null"/>
-    <attribute name="readonly" for="model" expr="eval: id != null"/>
-  </action-attrs>
-
-  <action-attrs name="action-action-form-onload">
-    <attribute name="readonly" for="name" expr="eval: id != null"/>
-    <attribute name="readonly" for="type" expr="eval: id != null"/>
-    <attribute name="readonly" for="model" expr="eval: id != null"/>
-  </action-attrs>
-
   <action-method name="action-view-validate">
     <call class="com.axelor.meta.web.MetaController" method="validateView"/>
   </action-method>
@@ -190,22 +175,17 @@
     <field name="mappedBy" />
   </grid>
 
-  <form name="meta-field-form" title="Field" model="com.axelor.meta.db.MetaField" cols="2" onLoad="meta-field-attrs">
+  <form name="meta-field-form" title="Field" model="com.axelor.meta.db.MetaField" cols="2">
     <field name="name"/>
     <field name="packageName"/>
     <field name="typeName"/>
     <field name="label"/>
-    <field name="relationship" onChange="meta-field-attrs"/>
-    <field name="mappedBy" />
-    <button name="openModel" title="Show Model" colSpan="2" onClick="meta-field-method-open-model"/>
+    <field name="relationship"/>
+    <field name="mappedBy" hiddenIf="relationship != 'OneToMany' || relationship != 'OneToOne'"/>
+    <button name="openModel" title="Show Model" colSpan="2" hiddenIf="!relationship" onClick="meta-field-method-open-model"/>
     <separator title="Description" colSpan="2"/>
     <field name="description" noLabel="true" colSpan="2"/>
   </form>
-
-  <action-attrs name="meta-field-attrs">
-    <attribute name="hidden" for="mappedBy" expr="eval: !(relationship in ['OneToMany','OneToOne'])" />
-    <attribute name="hidden" for="openModel" expr="eval: !relationship" />
-  </action-attrs>
 
   <action-method name="meta-field-method-open-model">
     <call class="com.axelor.meta.web.MetaController" method="openModel"/>
