--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -256,31 +256,37 @@
     <field name="stacked" />
   </grid>
   
-  <form title="Chart" name="meta-chart-form" model="com.axelor.meta.db.MetaChart" cols="4">
+  <form title="Chart" name="meta-chart-form" model="com.axelor.meta.db.MetaChart" cols="6">
     <field name="name" />
     <field name="title" />
+    <field name="stacked" />
+
     <field name="categoryKey" />
     <field name="categoryType" selection="selection.chart.xtype"/>
-    <field name="stacked" />
-    <field name="nativeQuery" />
-    <notebook colSpan="4">
-      <page cols="1" title="Query" colWidths="50,*">
-        <field name="query" noLabel="true" widget="CodeEditor[syntax=sql|height=400]"/>
+    <field name="categoryTitle"/>
+    <break/>
+
+    <notebook colSpan="6">
+      <page cols="4" title="Query">
+        <field name="queryType" selection="selection.chart.qtype"/>
+        <field name="query" colSpan="4" noLabel="true" widget="CodeEditor[syntax=sql|height=400]"/>
       </page>
       <page title="Series" cols="1">
         <field name="chartSeries">
           <grid title="Series" editable="true">
             <field name="key" />
+            <field name="groupBy"/>
             <field name="type" selection="selection.chart.type"/>
             <field name="side" selection="selection.chart.side"/>
-            <field name="expr"/>
+            <field name="title"/>
           </grid>
           <form title="Series">
             <field name="key" />
+            <field name="groupBy"/>
             <break/>
             <field name="type" selection="selection.chart.type" />
             <field name="side" selection="selection.chart.side"/>
-            <field name="expr" colSpan="4"/>
+            <field name="title" colSpan="4"/>
           </form>
         </field>
       </page>
@@ -308,6 +314,11 @@
     <option value="month">Month</option>
     <option value="year">Year</option>
     <option value="">Text</option>
+  </selection>
+  
+  <selection name="selection.chart.qtype">
+    <option value="jpql">JPQL</option>
+    <option value="sql">SQL</option>
   </selection>
 
 </object-views>
