--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -267,8 +267,9 @@
     <break/>
 
     <notebook colSpan="6">
-      <page cols="4" title="Query">
-        <field name="queryType" selection="selection.chart.qtype"/>
+      <page cols="4" title="Query" colWidths="5%,75,90%,*">
+        <field name="queryType" title="Type" css="small-input" selection="selection.chart.qtype"/>
+        <spacer colSpan="2"/>
         <field name="query" colSpan="4" noLabel="true" widget="CodeEditor[syntax=sql|height=400]"/>
       </page>
       <page title="Series" cols="1">
